force-app/main/default/objects/PC_Specialist_Availability__c/fields/PC_Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>PC_Service_Resource__c</fullName>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipName>PC_Specialist_Availabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>