force-app/main/default/objects/PC_Specialist_Availability__c/fields/PC_Specialist_Availability_Name__c.field-meta.xml
<CustomField>
    <fullName>PC_Specialist_Availability_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PrC Specialist Availability Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>