force-app/main/default/objects/PC_Specialist_Availability__c/fields/PC_Week_Ending_Date__c.field-meta.xml
<CustomField>
    <fullName>PC_Week_Ending_Date__c</fullName>
    <description>Week ending date of availability</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Week Ending Date</label>
    <type>Date</type>
</CustomField>